--- a/cases/integration/v1/join/test_lastjoin.yaml
+++ b/cases/integration/v1/join/test_lastjoin.yaml
@@ -1,5 +1,5 @@
 db: test_zw
-debugs: ["lastjoin列名重复-窗口没有指定表名"]
+debugs: []
 cases:
   - id: 0
     desc: lastjoin+窗口
@@ -84,7 +84,7 @@ cases:
         - [5,"bb",24,null,0,0]
   - id: 2
     desc: lastjoin+窗口+union
-    tags: ["bug-结果不符合预期"]
+    tags: ["TODO","暂时不支持 lastjoin window + union共存"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -125,7 +125,7 @@ cases:
         - [5,"bb",24,34,67]
   - id: 3
     desc: lastjoin+窗口+union子查询
-    tags: ["bug-sql执行失败"]
+    tags: ["TODO","暂时不支持 lastjoin window + union共存"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -214,6 +214,7 @@ cases:
         - [5,"bb",24,34,68]
   - id: 5
     desc: 两个子查询lastjoin
+    tags: ["TODO","请求模式下，sdk core"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -254,6 +255,7 @@ cases:
         - [5,"bb",24,34,68]
   - id: 6
     desc: 两个子查询lastjoin-子查询带窗口特征
+    tags: ["sql执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -388,6 +390,7 @@ cases:
   - id: 9
     desc: lastjoin三张表-5个window
     mode: rtidb-batch-unsupport
+    tags: ["TODO","请求模式下，sdk core"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -498,6 +501,7 @@ cases:
         - [5,"ee",24,24,null]
   - id: 11
     desc: (t1 join t2) join t3
+    tags: ["sql执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -685,7 +689,6 @@ cases:
       success: false
   - id: 17
     desc: 两个子查询lastjoin-子查询带窗口特征-没有使用索引-不带orderby
-    mode: rtidb-batch-unsupport
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
