--- a/cases/integration/v1/window/test_maxsize.yaml
+++ b/cases/integration/v1/window/test_maxsize.yaml
@@ -316,7 +316,7 @@ cases:
     id: 13
     desc: 两个窗口不同的ts的maxsize一致
     mode: rtidb-batch-unsupport
-    tags: ["TODO","@chenjing"]
+    tags: ["sql执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -381,6 +381,7 @@ cases:
     id: 15
     desc: 两个窗口不同的key的maxsize不一致
     mode: rtidb-batch-unsupport
+    tags: ["sql执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -413,7 +414,6 @@ cases:
     id: 16
     desc: 两个窗口的不同的ts的maxsize不一致
     mode: rtidb-batch-unsupport
-    tags: ["TODO","@chenjing"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
