--- a/cases/integration/v1/function/test_date.yaml
+++ b/cases/integration/v1/function/test_date.yaml
@@ -111,6 +111,7 @@ cases:
           - [2,null,null]
   - id: 5
     desc: hour-minute-fail
+    level: 5
     inputs:
       -
         columns : ["id bigint","ts1 bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
