--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,7 +174,7 @@ java_ut:
   dependencies:
     - build
 
-fesql_auto_test_level0:
+fesql_auto_test_level_0:
   stage: quick
   before_script:
     - mkdir /rambuild
@@ -220,7 +220,7 @@ fesql_sdk_c++_level_0:
     variables:
       - $ENV_BUILD == "daily"
 
-fesql_auto_test_level_all:
+fesql_auto_test_level_1+:
   stage: manual
   before_script:
     - mkdir /rambuild
@@ -228,8 +228,8 @@ fesql_auto_test_level_all:
   script:
     - ln -sf /depends/thirdparty thirdparty
     - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_auto_test.sh "0,1,2,3,4,5"
-    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_auto_test_cluster.sh "0,1,2,3,4,5"
+    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_auto_test.sh "1,2,3,4,5"
+    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_auto_test_cluster.sh "1,2,3,4,5"
   after_script:
     - tar czf $CI_COMMIT_SHA  src/sdk/java/fesql-auto-test-java/target/allure-results
     - bash steps/upload-nexus.sh $CI_COMMIT_SHA
@@ -250,14 +250,14 @@ fesql_auto_test_level_all:
   when: manual
 
 
-fesql_sdk_c++_level_all:
+fesql_sdk_c++_level_1+:
   stage: manual
   script:
     - source /root/.bashrc && sh tools/install_fesql.sh
     - ln -sf /depends/thirdparty thirdparty
     - ln -sf /depends/thirdsrc thirdsrc
     - source /root/.bashrc && bash steps/compile.sh
-    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_c_ut.sh 5
+    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/fesql_c_ut.sh "1,2,3,4,5"
   artifacts:
     reports:
       junit:
