fix: random insert

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -34,3 +34,5 @@ PK_NUM=50
 #request:batch_request
 REQUEST_RATIO=1.0
 PROCEDURE_RATIO=0.5
+#InsertPrepareStatement:normal insert
++INSERT_RATIO=0.9
