--- a/cases/plan/window_query.yaml
+++ b/cases/plan/window_query.yaml
@@ -126,7 +126,7 @@ cases:
     sql: |
       SELECT col2, col5, sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum,
       sum(col4) OVER w1 as w1_col4_sum, sum(col2) OVER w1 as w1_col2_sum,
-      sum(col5) OVER w1 as w1_col5_sum, count(col1) as w1_col1_cnt, col1,
+      sum(col5) OVER w1 as w1_col5_sum, count(col1) OVER w1 as w1_col1_cnt, col1,
       col6 as col6 FROM (select "tc_col0" as col0, col1, col2, 0.0f as col3, 0.0 as col4, col5, col6 from t1)
       WINDOW w1 AS (UNION (select c0 as col0, c1 as col1, c2 as col2, c3 as col3, 0.0 as col4, c5 as col5, "NA_STR" as col6 from tb)
       PARTITION BY col2 ORDER BY col5 ROWS_RANGE BETWEEN 3 PRECEDING AND CURRENT ROW) limit 10;
