--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: develop-registry.4pd.io/centos6_gcc7_fesql:0.0.12
 services:
-  - docker:dind
+  - docker.4pd.io/docker:dind 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 stages:
