--- a/java/fesql-common/pom.xml
+++ b/java/fesql-common/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<artifactId>fesql-sdk</artifactId>
 		<groupId>com._4paradigm.fesql</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.3-RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fesql-common</artifactId>
 	<packaging>jar</packaging>
 	<name>fesql-common</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.3-RELEASE</version>
 
     <dependencies>
 		<dependency>
