--- a/java/fesql-native/pom.xml
+++ b/java/fesql-native/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<artifactId>fesql-sdk</artifactId>
 		<groupId>com._4paradigm.fesql</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.3-RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fesql-native</artifactId>
 	<packaging>jar</packaging>
 	<name>fesql-native</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.3-RELEASE</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com._4paradigm.fesql</groupId>
 			<artifactId>fesql-proto</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.3-RELEASE</version>
 		</dependency>
 
 		<dependency>
