--- a/java/fesql-spark/pom.xml
+++ b/java/fesql-spark/pom.xml
@@ -5,14 +5,14 @@
 <parent>
 		<artifactId>fesql-sdk</artifactId>
 		<groupId>com._4paradigm.fesql</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.3-RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fesql-spark</artifactId>
 	<packaging>jar</packaging>
 	<name>fesql-spark</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.3-RELEASE</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
