--- a/cases/integration/v1/expression/test_compare.yaml
+++ b/cases/integration/v1/expression/test_compare.yaml
@@ -208,7 +208,6 @@ cases:
       success: false
   - id: 6
     desc: "bool_比较运算_各种类型"
-    tags: ["TODO","bug,@baoxinqi，true>false =>false"]
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -225,12 +224,10 @@ cases:
     sql: select {0}.c9 d[0] {1}.c1 as b1,{0}.c9 d[0] {1}.c2 as b2,{0}.c9 d[0] {1}.c3 as b3,{0}.c9 d[0] {1}.c4 as b4,{0}.c9 d[0] {1}.c5 as b5,{0}.c9 d[0] {1}.c6 as b6,{0}.c9 d[0] {1}.c9 as b9,{0}.c9 d[0] {1}.c10 as b10 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
     expect:
       columns: ["b1 bool","b2 bool","b3 bool","b4 bool","b5 bool","b6 bool", "b9 bool","b10 bool"]
-      rows:
-        - [false,false,false,false,false,false,true,false]
     expectProvider:
       0:
         rows:
-          - [true,true,false,false,false,false,true,true]
+          - [true,false,false,false,false,false,true,false]
       1:
         rows:
           - [true,true,false,false,false,false,true,true]
@@ -239,19 +236,19 @@ cases:
           - [false,false,true,true,true,true,false,false]
       3:
         rows:
-          - [true,true,true,true,true,true,false,true]
+          - [false,true,true,true,true,true,false,true]
       4:
         rows:
-          - [false,false,true,true,true,true,true,false]
+          - [true,false,true,true,true,true,true,false]
       5:
         rows:
-          - [false,false,true,true,true,true,true,false]
+          - [true,false,true,true,true,true,true,false]
       6:
         rows:
-          - [true,true,false,false,false,false,false,true]
+          - [false,true,false,false,false,false,false,true]
       7:
         rows:
-          - [true,true,false,false,false,false,false,true]
+          - [false,true,false,false,false,false,false,true]
   - id: 7
     desc: "IS_NULL_各种类型"
     tags: ["TODO","目前不支持"]
