--- a/cases/integration/v1/window/test_window.yaml
+++ b/cases/integration/v1/window/test_window.yaml
@@ -620,6 +620,7 @@ cases:
     id: 22
     desc: 两个窗口相同的pk,不同的ts,相同的聚合函数
     mode: rtidb-batch-unsupport
+    tags: ["TODO","@chenjing by@zhaowei","sql执行失败","http://jira.4paradigm.com/browse/FEX-924"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -736,6 +737,7 @@ cases:
     id: 26
     desc: 两个窗口不同的ts,一个都在窗口内，一个都不进入窗口
     mode: rtidb-batch-unsupport
+    tags: ["TODO","@chenjing by@zhaowei","sql执行失败,应该和 22 case是一个问题"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
