--- a/cases/integration/v1/window/test_maxsize.yaml
+++ b/cases/integration/v1/window/test_maxsize.yaml
@@ -509,6 +509,8 @@ cases:
   -
     id: 19
     desc: union结合maxsize
+    mode: cluster-unsupport
+    tags: ["cluster-执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -536,7 +538,8 @@ cases:
   -
     id: 20
     desc: union结合maxsize-两个窗口
-    mode: rtidb-batch-unsupport
+    mode: rtidb-batch-unsupport,cluster-unsupport
+    tags: ["cluster-执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -592,6 +595,8 @@ cases:
   -
     id: 22
     desc: union子查询结合maxsize
+    mode: cluster-unsupport
+    tags: ["cluster-执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -658,6 +663,8 @@ cases:
   -
     id: 24
     desc: union多表结合maxsize
+    mode: cluster-unsupport
+    tags: ["cluster-执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -702,7 +709,8 @@ cases:
   -
     id: 26
     desc: 两个union,不同的maxsize
-    mode: rtidb-batch-unsupport
+    mode: rtidb-batch-unsupport,cluster-unsupport
+    tags: ["cluster-执行失败"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
