--- a/src/sdk/java/fesql-auto-test-java/pom.xml
+++ b/src/sdk/java/fesql-auto-test-java/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <sql.version>2.1.0.0-SNAPSHOT</sql.version>
-        <fesql.version>0.0.1-SNAPSHOT</fesql.version>
+        <fesql.version>0.0.3-RELEASE</fesql.version>
         <suiteXmlFile>test_suite/test_v1.xml</suiteXmlFile>
         <aspectj.version>1.8.9</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
