--- a/cases/integration/v1/test_insert.yaml
+++ b/cases/integration/v1/test_insert.yaml
@@ -126,3 +126,162 @@ cases:
     sql: insert into {0} (c1,c2) values(aa,1590738989000L);
     expect:
       success: false
+  -
+    id: 11
+    desc: 相同时间戳数据
+    inputs:
+      -
+        columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",2,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",3,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",4,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",5,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",6,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",7,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",8,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",9,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",10,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",11,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",12,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",13,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",14,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",15,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",16,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",17,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",18,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",19,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",20,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+    sql: select * from {0};
+    expect:
+      columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+      rows:
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+  -
+    id: 12
+    desc: 相同时间戳数据且ttl_type=absolute,ttl=60m
+    tags: ["TODO", "@denglong", "预期数据都保留20条数据，实际输出数据条数为0"]
+    inputs:
+      -
+        columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7:60m:absolute"]
+        rows:
+          - ["aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",2,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",3,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",4,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",5,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",6,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",7,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",8,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",9,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",10,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",11,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",12,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",13,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",14,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",15,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",16,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",17,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",18,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",19,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",20,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+    sql: select * from {0};
+    expect:
+      columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+      rows:
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+  -
+    id: 13
+    desc: 相同时间戳数据且ttl_type=absandlat,ttl=(60m, 9)
+    tags: ["TODO", "@denglong", "预期数据都保留20条数据，实际输出数据条数为9"]
+    inputs:
+      -
+        columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7:60m|9:absandlat"]
+        rows:
+          - ["aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",2,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",3,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",4,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",5,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",6,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",7,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",8,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",9,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",10,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",11,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",12,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",13,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",14,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",15,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",16,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",17,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",18,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",19,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+          - ["aa",20,2,3,1.1,2.1,1590738989000,"2020-05-01"]
+    sql: select * from {0};
+    expect:
+      columns : ["c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+      rows:
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+        - [ "aa",1,2,3,1.1,2.1,1590738989000,"2020-05-01" ]
+
